# webrtc

./: .gitignore  .gitmodules  docker-compose.yml  readme.md
config/: my.conf  ui.conf
signaling/: Dockerfile  app.py  build  pyproject.toml  readme.md
signaling/src/: signaling.py
ui/: .env  .gitignore  Dockerfile  README.md  build  index.html  package.json  pnpm-lock.yaml
ui/src/: App.vue
ui/src/components/: Lobby.vue  VideoChat.vue
ui/src/composables/: rtc.ts
ui/src/router/: index.ts
ui/src/types/: webrtc.ts
