[tool.poetry]
name = "signaling"
version = "0.1.0"
description = ""
authors = ["whitek <likeccpo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["standard"], version = "^0.115.3" }
uvicorn = { extras = ["standard"], version = "^0.32.0" }
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
